# cw-adapter

./: Cargo.toml  Dockerfile  README.md  build.rs  build_all.sh  link-rp235x.x
.cargo/: config.toml
.github/workflows/: ci.yml  pages.yml  release.yml
scripts/: build-web.sh  patch_esp32s3.py  patch_uf2_family.py  trim-binary.py
src/: cdc_serial_state.rs  common.rs  esp32s3.rs  esp32s3_keyer.rs  keyer_app.rs  lib.rs  midi_interrupt.rs  rp2040.rs  rp2040_keyer.rs  rp2350.rs
web/: index.html
